@@ -2,6 +2,8 @@
  - Configurable icon for chrome menu
  - translation contribution
  - changelog
+ - preview sidebar width
+ - hide delete/edit on root level
 
 [1.7]
  - Configurable typeface
